--- a/mission2/mission2.html
+++ b/mission2/mission2.html
@@ -15,17 +15,41 @@
   <header>
     <img src="header/logo.svg" alt="logo">
     <ul>
-      <li>首頁</li>
       <li class="w600">
         <div class="tl"></div>
         <div class="tr"></div>
-        作品集
+        <a href="#">首頁</a>
         <div class="br"></div>
         <div class="bl"></div>
       </li>
-      <li>服務項目</li>
-      <li>部落格</li>
-      <li>聯絡我</li>
+      <li class="w600">
+        <div class="tl"></div>
+        <div class="tr"></div>
+        <a href="#">作品集</a>
+        <div class="br"></div>
+        <div class="bl"></div>
+      </li>
+      <li class="w600">
+        <div class="tl"></div>
+        <div class="tr"></div>
+        <a href="#">服務項目</a>
+        <div class="br"></div>
+        <div class="bl"></div>
+      </li>
+      <li class="w600">
+        <div class="tl"></div>
+        <div class="tr"></div>
+        <a href="#">部落格</a>
+        <div class="br"></div>
+        <div class="bl"></div>
+      </li>
+      <li class="w600">
+        <div class="tl"></div>
+        <div class="tr"></div>
+        <a href="#">聯絡我</a>
+        <div class="br"></div>
+        <div class="bl"></div>
+      </li>
     </ul>
     
     <img class="menu" src="header/menu_40dp.svg" alt="">
@@ -38,26 +62,26 @@
 
 
   <div class="scarf">
-    <ul class="top">
-      <li class="quote-left">
+    <div class="top">
+      <div class="quote-left">
         <img src="scarf/quote-left.png" alt="">
-      </li>
-      <li class="middle">
+      </div>
+      <div class="middle">
         <p>
         讓使用者在觀賞與使用的旅程中,發現設計的價值
       </p>
       <img class="m1" src="scarf/mark.png" alt="">
-    </li>
-      <li class="middle">
+    </div>
+      <div class="middle">
         <p>
         而我在設計與開發的過程中,看見自己的價值
       </p>
       <img class="m2" src="scarf/mark.png" alt="">
-      </li>
-      <li class="quote-right">
+      </div>
+      <div class="quote-right">
         <img src="scarf/quote-right.png" alt="">
-      </li>
-    </ul>
+      </div>
+    </div>
     
     <div class="bottom">
       <div class="left">
@@ -84,80 +108,80 @@
 
 
 
-  <div class="board">
-    <div class="box">
-      <img src="board/work-image1.png" alt="">
-      <h1>星際旅行訂票平台</h1>
+  <ul class="board">
+    <li class="box">
+      <img src="board/work-image1.png" alt="#">
+      <h2>星際旅行訂票平台</h2>
       <p>悠遊宇宙的夢想, 從這裡開始實現</p>
       <ul>
-        <li>網頁設計</li>
-        <li>響應式設計</li>
-        <li>Bootstrap</li>
+        <li><a href="#">網頁設計</a></li>
+        <li><a href="#">響應式設計</a></li>
+        <li><a href="#">Bootstrap</a></li>
       </ul>
-    </div>
+    </li>
 
-    <div class="box">
-      <img src="board/work-image2.png" alt="">
+    <li class="box">
+      <img src="board/work-image2.png" alt="#">
 
-      <h1>理財App</h1>
+      <h2>理財App</h2>
       <p>連動帳戶與行動支付, 讓AI提供您最好的理財建議
       </p>
       <ul>
-        <li>APP設計</li>
-        <li>iOS</li>
-        <li>React</li>
+        <li><a href="#">APP設計</a></li>
+        <li><a href="#">iOS</a></li>
+        <li><a href="#">React</a></li>
       </ul>
-    </div>
+    </li>
 
-    <div class="box">
-      <img src="board/work-image3.png" alt="">
-      <h1>醫美診所官網</h1>
+    <li class="box">
+      <img src="board/work-image3.png" alt="#">
+      <h2>醫美診所官網</h2>
       <p>永保青春的秘密, 從粹究開始</p>
       <ul>
-        <li>網頁設計</li>
-        <li>響應式設計</li>
-        <li>WordPress</li>
+        <li><a href="#">網頁設計</a></li>
+        <li><a href="#">響應式設計</a></li>
+        <li><a href="#">WordPress</a></li>
       </ul>
-    </div>
+    </li>
 
-    <div class="box">
-      <img src="board/work-image4.png" alt="">
-      <h1>美美美早餐店 POS 機 UI Design</h1>
+    <li class="box">
+      <img src="board/work-image4.png" alt="#">
+      <h2>美美美早餐店 POS 機 UI Design</h2>
       <p>訂單送單一目瞭然, 自動報表分析好輕鬆</p>
       <ul>
-        <li>UI設計</li>
-        <li>前端開發</li>
-        <li>Wix</li>
+        <li><a href="#">UI設計</a></li>
+        <li><a href="#">前端開發</a></li>
+        <li><a href="#">Wix</a></li>
       </ul>
-    </div>
+    </li>
 
-    <div class="box">
-      <img src="board/work-image5.png" alt="">
-      <h1>電影院訂票系統</h1>
+    <li class="box">
+      <img src="board/work-image5.png" alt="#">
+      <h2>電影院訂票系統</h2>
       <p>三步驟完成訂票, 電腦手機都支援</p>
       <ul>
-        <li>前端開發</li>
-        <li>後端支援</li>
-        <li>Vue</li>
+        <li><a href="#">前端開發</a></li>
+        <li><a href="#">後端支援</a></li>
+        <li><a href="#">Vue</a></li>
       </ul>
-    </div>
+    </li>
 
-    <div class="box">
-      <img src="board/work-image6.png" alt="">
-      <h1>巧克巧克形象官網設計</h1>
+    <li class="box">
+      <img src="board/work-image6.png" alt="#">
+      <h2>巧克巧克形象官網設計</h2>
       <p>三步驟完成訂票, 電腦手機都支援</p>
       <ul>
-        <li>UI設計</li>
-        <li>設計系統</li>
-        <li>網路電商</li>
+        <li><a href="#">UI設計</a></li>
+        <li><a href="#">設計系統</a></li>
+        <li><a href="#">網路電商</a></li>
       </ul>
-    </div>
-  </div>
+    </li>
+  </ul>
 
   <ul class="page">
-    <li class="radius">1</li>
-    <li class="mrl16">2</li>
-    <li>3</li>
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
   </ul>
 
 
@@ -167,32 +191,42 @@
 
 
   <footer>
-    <ul class="footer-left">
-      <li>
-        <img src="header/logo.svg" alt="">
-      </li>
-      <li class="mt24">
-        若有數位產品設計和開發相關問題歡迎填寫表單, 或直接與我聯絡！
-      </li>
-      <li class="cg2 mt24">
-        service@hexschool.com
-      </li>
-    </ul>
-
-    <ul class="footer-right">
-      <li class="bgb">
-        <img src="footer/list.svg" alt="">
-        填寫表單
-      </li>
-      <li class="bgw">
-        <img src="footer/instagram.svg" alt="">
-        hexschool_demo
-      </li>
-      <li class="bgw">
-        <img src="footer/facebook.svg" alt="">
-        hexschoolTW
-      </li>
-    </ul>
+    <div class="foot">
+      <ul class="footer-left">
+        <li>
+          <img src="header/logo.svg" alt="">
+        </li>
+        <li class="mt24">
+          若有數位產品設計和開發相關問題歡迎填寫表單, 或直接與我聯絡！
+        </li>
+        <li class="cg2 mt24">
+          service@hexschool.com
+        </li>
+      </ul>
+  
+      <div class="footer-right">
+        <a class="list" href="">
+          <div>
+            <img src="footer/list.svg" alt="">
+            填寫表單
+          </div>
+        </a>
+  
+        <a href="#">
+          <div>
+          <img src="footer/instagram.svg" alt="">
+          hexschool_demo
+          </div>
+        </a>
+  
+        <a href="">
+          <div>
+          <img src="footer/facebook.svg" alt="">
+          hexschoolTW
+          </div>
+        </a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
